css-team: change z-index of the submenus in an attempt to fix a chrome bug
git-svn-id: svn+ssh://atelier.inf.usi.ch/home/bevilj/group-1@48 a672b425-5310-4d7a-af5c-997e18724b81

--- a/site/_sass/_header.scss
+++ b/site/_sass/_header.scss
@@ -37,6 +37,7 @@
       list-style: none;
       margin-left: -10px;
       background-color: #131313;
+      z-index: 1;
 
       li {
         color: #FFFFFF;
